static/css/apps/accounts.css
body {
  background-color: var(--background-body);
  color: var(--color-darker);
  font-family: 'Open Sans', sans-serif;
  font-size: 1.125rem;
}

.vertical-center {
  align-items: center;
  display: flex;
  min-height: 80%;
}

@supports (height: 80vh) {
  .vertical-center {
  min-height: 80vh; /* Override with 80vh if supported */
  }
}

.auth-container {
  align-items: center;
  display: flex;
  height: 80%;
  justify-content: center;
  width: 100%;
}

.auth-card {
  background: var(--background-medium-light);
  border-radius: var(--radius-md);
  border: solid 1px var(--border-medium-dark);
  padding: 1.25rem 1rem 1.5rem;
  width: 31.25rem;
}

.auth-title {
  color: var(--link);
  font-size: 1.75rem;
  font-weight: 500;
  margin-bottom: 0.25rem;
  text-align: center;
}

.auth-subtitle {
  font-size: 1em;
  margin-bottom: 2rem;
  text-align: center;
}

.auth-info {
  color: var(--color-primary);
  /* font-size: 1rem; */
  margin: 2rem 0;
  text-align: center;
}

.auth-error {
  background: var(--error-background);
  border: 1px solid var(--error-border);
  border-radius: var(--radius-sm);
  color: var(--error);
  font-size: 0.9em;
  margin-bottom: 0.75rem;
  padding: 0.75rem;
  text-align: center;
}

.prompt {
  margin-bottom: 2rem;
}

.reset-confirm p {
  margin-bottom: 1.25rem;
}

.account-form p {
  margin: 2rem 0 0;
  padding: 0;
}

.account-form label {
  display: block;
  font-weight: normal;
}

.account-form input {
  border: solid 1px var(--background-nav);
  border-radius: var(--radius-sm);
  display: block;
  font-size: inherit;
  margin-top: 0.25rem;
  padding: 0.5rem;
  width: 100%;
}

.account-form ul {
  padding-left: 0.25rem;
}

.account-form ul li {
  color: var(--urgent);
  font-size: 0.75rem;
  margin-top: 0.25rem;
}

.account-form button:not(.btn) {
  background: var(--link);
  border: solid 1px var(--link);
  border-radius: var(--radius-sm);
  color: var(--background-subnav);
  font-size: 1em;
  margin-top: 2.5rem;
  padding: 0.5rem 0.75rem;
}

input {
  filter: none;
}

input:focus {
  outline: none;
}

.login-bottom {
  align-items: flex-end;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.login-bottom-right {
  display: flex;
  flex-direction: column;
  font-size: 1rem;
  margin-bottom: 0.25rem;
}

.reset-confirm {
  margin-top: 2rem;
}

.reset-complete {
  text-align: center;
}

.spam-folder {
  color: var(--urgent);
  font-weight: 600;
}

.auth-buttons {
  align-items: center;
  display: flex;
  flex-direction: row;
  gap: 1rem;
  justify-content: flex-end;
  margin-top: 2rem;
}

.auth-buttons.justify-between {
  justify-content: space-between;
}

